# docs-generator

./: .gitignore  GEMINI.md  README.md  alembic.ini  pyproject.toml  ruff.toml  sql_app.db
.gemini/commands/: sp.tasks.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
alembic/: env.py
alembic/versions/: a861a936874c_add_userapikey_model.py
docgen-ai/: App.tsx  index.html  package-lock.json  package.json
docgen-ai/components/: InputSection.tsx  LoginScreen.tsx  SettingsScreen.tsx  Sidebar.tsx
docgen-ai/services/: apiService.ts
docgen-ai/utils/: mockData.ts
docugen-ai/: App.tsx  README.md  metadata.json  package-lock.json  package.json  security_test_vectors.md  types.ts
docugen-ai/components/: Dashboard.tsx  DocViewer.tsx  Header.tsx  InputSection.tsx  LoginScreen.tsx  SettingsScreen.tsx
docugen-ai/services/: apiService.ts  geminiService.ts
history/prompts/001-code-analysis-engine/: 0001-create-specification-for-code-analysis-engine.spec.prompt.md  0002-create-architectural-plan-for-code-analysis-engine.plan.prompt.md  0003-commit-planning-artifacts-and-create-pr.misc.prompt.md  0004-create-github-pull-request-via-api.misc.prompt.md  0005-commit-quickstart-and-agent-context-update.misc.prompt.md  0006-generate-task-list-for-code-analysis-engine.tasks.prompt.md  0007-update-tasks-with-uv-init-command.tasks.prompt.md  0008-commit-and-create-pr-for-code-analysis-engine-tasks.misc.prompt.md  0009-implement-code-analysis-engine.green.prompt.md  0011-commit-and-create-pr-for-code-analysis-engine.misc.prompt.md
history/prompts/002-ai-processing-engine/: 0001-create-specification-for-ai-processing-engine.spec.prompt.md  0002-commit-and-create-pr-for-ai-processing-engine-spec.misc.prompt.md  0003-plan-ai-processing-engine-architecture.plan.prompt.md  0004-generate-ai-processing-engine-tasks.tasks.prompt.md  0005-implement-ai-processing-engine.green.prompt.md  (+22 more)
specs/001-code-analysis-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ai-processing-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: database.py
src/analysis/: orchestrator.py  repository.py
src/api/: auth.py  main.py  routes.py
src/common/: constants.py  exceptions.py
src/document_generator/: __init__.py  agent.py  engine.py  markdown.py  strategies.py  validator.py
src/models/: analysis.py  auth.py  doc_gen.py  sql_user.py
tests/integration/: conftest.py  test_analysis_orchestrator.py  test_api.py  test_doc_generation_flow.py
(+28 files in other folders)
